# prototype-api-server

./: Cargo.toml  Rocket.toml  test-data.json  viewallorders_response.json
migrations/2022-03-25-114116_create_orders/: up.sql
migrations/2022-04-08-230513_user_auth/: down.sql  up.sql
src/: cors.rs  data_structures.rs  db.rs  diesel_postgres.rs  ds.rs  error_logging.rs  main.rs  models.rs  schema.rs  secrets.rs  test-curl  utils.rs
