[package]
name = "prototype-api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.9"
rocket = "0.5.0-rc.1"
# tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread", "macros"] }

