[package]
name = "prototype-api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.9"
rocket = { version = "0.5.0-rc.1", features = ["json"]}
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.17.0" , features = ["rt", "macros", "rt-multi-thread", "time", "sync"]}
tokio-postgres = "0.7.5"
postgres = "0.19.2"
itertools = "0.10.3"
ethereum-types = "0.13.1"
uuid = { version = "0.8.2", features = ["v4"]}
diesel = { version = "1.4.8", features = ["postgres", "serde_json"]}
diesel_migrations = "1.4.0"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]

